# django_test

./: .gitignore  README.md  pyproject.toml
src/: manage.py
src/django_test/: settings.py  urls.py
src/django_test/views/: __init__.py  login.py  profile.py  serializers.py
src/geodjango_test/: admin.py  apps.py  urls.py
src/geodjango_test/api/: urls.py
src/geodjango_test/api/views/: __init__.py  address.py  person.py  user.py
src/geodjango_test/management/commands/: load_worldborder.py
src/geodjango_test/migrations/: 0001_initial.py  0002_person.py  0003_alter_person_user.py  0004_address.py  0005_address_location.py
src/geodjango_test/models/: __init__.py  address.py  person.py  worldborders.py
src/geodjango_test/templates/: base.html  form.html  form_thanks.html  index.html
src/geodjango_test/validators/: email_validator.py  password_validator.py
src/geodjango_test/views/: __init__.py  form.py  index.py
tests/: test_email_validators.py  test_password_validator.py
